<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
	android:gravity="center"
	android:background="@color/mainbackgroud"
	>

    <TextView
		android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:textSize="75sp"
		android:text="Resflux" 
		/>		
		

   <!-- <TextView
		android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:textSize="16sp"
		android:textColor="#777777"
		android:text=""
		android:shadowRadius="0"
		/>		
	-->
	<ProgressBar
		android:id="@+id/loading"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
		
	<ScrollView
		android:fillViewport="true"
		android:gravity="center"	
		android:visibility="gone"
		android:id="@+id/rooms"
		android:layout_width="match_parent"
		android:layout_weight="1"
		android:layout_height="0dp">
		
		<LinearLayout
			android:layout_gravity="center_horizontal"
			android:gravity="center"
			android:orientation="vertical" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<Button
				android:id="@+id/continue_experiment_button"
				android:layout_width="300dp"
				android:layout_height="50dp"
				android:text="@string/continueexperiment"
				/>

			<Button
				android:id="@+id/new_experiment_button"
				android:layout_width="300dp"
				android:layout_height="50dp"
				android:text="@string/newexperiment"
				/>

			<Button
				android:id="@+id/import_button"
				android:layout_width="300dp"
				android:layout_height="50dp"
				android:text="@string/importexperiment"
				/>

			<Button
				android:id="@+id/export_button"
				android:layout_width="300dp"
				android:layout_height="50dp"
				android:text="@string/exportexperiment"
				/>

			<Button
				android:id="@+id/help_button"
				android:layout_width="300dp"
				android:layout_height="50dp"
				android:text="@string/help"
				/>


			<Button
				android:id="@+id/about_button"
				android:layout_width="300dp"
				android:layout_height="50dp"
				android:text="@string/about"
				/>
		
	
		
		</LinearLayout>
	</ScrollView>
	
	
	<TextView
		android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:text="@string/copyright" />

	
</LinearLayout>
